--- a/ui/src/app/rulechain/add-rulenode.tpl.html
+++ b/ui/src/app/rulechain/add-rulenode.tpl.html
@@ -21,7 +21,7 @@
             <div class="md-toolbar-tools">
                 <h2 translate>rulenode.add</h2>
                 <span flex></span>
-                <div id="help-container"></div>
+                <!-- <div id="help-container"></div> -->
                 <md-button class="md-icon-button" ng-click="vm.cancel()">
                     <ng-md-icon icon="close" aria-label="{{ 'dialog.close' | translate }}"></ng-md-icon>
                 </md-button>
