--- a/ui/src/app/rulechain/rulechain.tpl.html
+++ b/ui/src/app/rulechain/rulechain.tpl.html
@@ -153,7 +153,7 @@
                             on-apply-details="vm.saveRuleNode(vm.ruleNodeForm)"
                             the-form="vm.ruleNodeForm">
             <details-buttons tb-help="vm.helpLinkIdForRuleNodeType()" help-container-id="help-container">
-                <div id="help-container"></div>
+                <!-- <div id="help-container"></div> -->
             </details-buttons>
             <md-tabs md-selected="vm.selectedRuleNodeTabIndex"
                      id="ruleNodeTabs" md-border-bottom flex class="tb-absolute-fill" ng-if="vm.isEditingRuleNode">
