--- a/ui/src/app/tenant/tenants.tpl.html
+++ b/ui/src/app/tenant/tenants.tpl.html
@@ -17,7 +17,7 @@
 -->
 <tb-grid grid-configuration="vm.tenantGridConfig">
 	<details-buttons tb-help="'tenants'" help-container-id="help-container">
-		<div id="help-container"></div>
+		<!-- <div id="help-container"></div> -->
 	</details-buttons>
 	<md-tabs ng-class="{'tb-headless': vm.grid.detailsConfig.isDetailsEditMode}"
 			 id="tabs" md-border-bottom flex class="tb-absolute-fill">
