--- a/ui/src/app/admin/outgoing-mail-settings.tpl.html
+++ b/ui/src/app/admin/outgoing-mail-settings.tpl.html
@@ -21,7 +21,7 @@
           <md-card-title-text layout="row">
            	  <span translate class="md-headline">admin.outgoing-mail-settings</span>
 			  <span flex></span>
-			  <div id="help-container"></div>
+			  <!-- <div id="help-container"></div> -->
           </md-card-title-text>
         </md-card-title>	
    	    <md-progress-linear md-mode="indeterminate" ng-disabled="!$root.loading" ng-show="$root.loading"></md-progress-linear>
