--- a/ui/src/app/rulechain/rulechains.tpl.html
+++ b/ui/src/app/rulechain/rulechains.tpl.html
@@ -17,7 +17,7 @@
 -->
 <tb-grid grid-configuration="vm.ruleChainGridConfig">
     <details-buttons tb-help="'rulechains'" help-container-id="help-container">
-        <div id="help-container"></div>
+        <!-- <div id="help-container"></div> -->
     </details-buttons>
     <md-tabs ng-class="{'tb-headless': (vm.grid.detailsConfig.isDetailsEditMode || !vm.isRuleChainEditable(vm.grid.operatingItem()))}"
              id="tabs" md-border-bottom flex class="tb-absolute-fill">
